<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dromara.mpe</groupId>
    <artifactId>mybatis-plus-ext</artifactId>
    <packaging>pom</packaging>
    <version>3.5.10.1-EXT813</version>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>mybatis-plus框架的拓展包，基于spring
        boot、mybatis-plus，在框架原有基础上做了进一步的轻度封装，更加方便使用，针对代码（字段字符串、Mapper、Repository/Service）预生成、数据自动填充（类似JPA中的审计）、关联查询（类似sql中的join）、自动建表、冗余数据自动更新、固定条件等方面通过注解做了增强。
    </description>
    <url>${projectUrl}</url><!--填入开发者信息，姓名、邮箱、项目地址-->
    <developers>
        <developer>
            <name>唐振超</name>
            <email>imtzc@qq.com</email>
            <url>https://gitee.com/tangzc</url>
        </developer>
    </developers>
    <licenses>
        <!--以下内容不需要修改，直接复制咱贴即可-->
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo,manual</distribution>
        </license>
    </licenses>
    <scm>
        <!-- 采用projectUrl变量代替这个值，方便给重复利用这个配置，也就是上面的标签替换一下值就行 -->
        <connection>${projectUrl}</connection>
        <developerConnection>${projectUrl}</developerConnection>
        <url>${projectUrl}</url>
    </scm>

    <properties>
        <mybatis.version>3.5.16</mybatis.version>
        <spring-boot.version>2.7.18</spring-boot.version>
        <mybatis-spring.version>2.1.2</mybatis-spring.version>
        <mybatis-plus.version>3.5.10.1</mybatis-plus.version>
        <auto-table.version>2.1.3</auto-table.version>
        <dynamic-datasource.version>4.3.1</dynamic-datasource.version>

        <!-- maven配置-->
        <java.version>8</java.version>
        <resource.delimiter>@</resource.delimiter>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--插件-->
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
        <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
        <central-publishing-maven-plugin.version>0.6.0</central-publishing-maven-plugin.version>

        <projectUrl>https://gitee.com/tangzc/mybatis-plus-ext</projectUrl>
    </properties>

    <modules>
        <module>mybatis-plus-ext-autotable</module>
        <module>mybatis-plus-ext-bind</module>
        <module>mybatis-plus-ext-core</module>
        <module>mybatis-plus-ext-condition</module>
        <module>mybatis-plus-ext-datasource</module>
        <module>mybatis-plus-ext-demo</module>
        <module>mybatis-plus-ext-processor</module>
        <module>mybatis-plus-ext-spring-boot-starter</module>
        <module>mybatis-plus-ext-spring-boot3-starter</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>central</id>
            <name>central-releases</name>
            <url>https://s01.oss.sonatype.org/</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <!-- boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- 生成MD5校验文件 -->
                <plugin>
                    <groupId>net.ju-n.maven.plugins</groupId>
                    <artifactId>checksum-maven-plugin</artifactId>
                    <version>1.4</version>
                    <executions>
                        <execution>
                            <id>checksum-maven-plugin-files</id>
                            <phase>package</phase>
                            <goals>
                                <goal>files</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <fileSets>
                            <fileSet>
                                <directory>${project.build.directory}</directory>
                                <includes>
                                    <include>*.jar</include>
                                    <include>*.pom</include>
                                </includes>
                            </fileSet>
                        </fileSets>
                        <algorithms>
                            <algorithm>SHA-1</algorithm>
                            <algorithm>MD5</algorithm>
                        </algorithms>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- 发布插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <charset>UTF-8</charset><!-- utf-8读取文件 -->
                    <encoding>UTF-8</encoding><!-- utf-8进行编码代码 -->
                    <docencoding>UTF-8</docencoding><!-- utf-8进行编码文档 -->
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
